修改资源配置.