@@ -1,4 +1,4 @@
 #!/bin/bash
-mainClass="pers.yzq.spark.hbase.Common.US_Traffic_2015_H"
-scala -classpath /opt/service/spark/spark-app/target/spark-2.0.jar ${mainClass}
-#-Djava.ext.dirs=
+
+mainClass="pers.yzq.spark.datasets.LocalHandler"
+java -Xmx8G -classpath /opt/service/spark/spark-app/target/spark-2.0.jar;/opt/service/local/com/google/guava/guava/14.0.1/guava-14.0.1.jar ${mainClass}
